# sweref99-nu

./: .editorconfig  .gitignore  CMakeLists.txt  CNAME  INVESTIGATION.md  Makefile  README.md  SBOM-README.md  SBOM.spdx  SWEREF99-DEFINITION.md  THRESHOLD-RESEARCH.md  create_minimal_proj_db.py  jest.config.js  optimize_proj_db.py  package-lock.json  package.json  sbom.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  links.yml
_site/: app.webmanifest  design-switcher.js  design-switcher.js.map  icon-showcase.html  index.html  liquid-glass.css  llms.txt  material-design.css  om.html  proj4.js  script.js  sr9.js  sr9.wasm  stil-standalone.css  stil.css  sw.js  test_wasm.html
src/: design-switcher.ts  index.html  script.ts  sr9.c  sr9.cpp
tests/: README.md  button-state.test.ts  coordinate-formatting.test.ts  details-state.test.ts  script.test.ts  speed-units.test.ts
